css/style.css
/* ... */
#webAdmin-collapseToggle:checked~div.admin-links {
    /* Old rules: */
    /* margin: 1.5% auto;
    height: 100%;
    display: table;
    vertical-align: middle;
    padding: 10px 30px;
    border: 1px solid #1e6c93;
    border-radius: 8px; */
    margin: auto;
    height: 100%;
    width: 100%;
    display: table;
    vertical-align: middle;
    padding: 1% 3%;
    background-color: #f4f7f9;
}

#quickLinks-collapseToggle:checked+div.blue-section-innerContainer>div.section-content {
    display: table;
}

.admin-links {
    height: 0;
    background-color: white;
}

.admin-links a {
    display: block;
    text-align: left;
    margin: 8px 0;
}

.admin-links a::before {
    content: "\00bb";
    padding-right: 3px;
}

.open-column-button {
    cursor: pointer;
    border: 0;
    background: transparent;
    font-size: 2.2em;
    padding: 0px 9px 3px 9px;
    display: inline;
    margin-left: 20px;
    /*used to be 5px*/
    /* Padding when icons were being used :
   padding: 0px 5px 5px 5px;
    /*  padding: 5px 10px 10px 10px; */
    border-radius: 100%;
    background-color: white;
    color: #1e6c93;
}

.open-column-button::after {
    content: '+';
    /* \02295' */
}

.nonButtonImages {
    height: 98px;
}

#arrow-link,
.scrollArrow {
    display: none;
}

.google-sheet {
    height: 500px;
}


/* Menu Bar */

.nav-menu-icon {
    display: none;
}

.checkbox-hack {
    display: none;
}

.bar1,
.bar2,
.bar3 {
    width: 35px;
    height: 5px;
    background-color: #1e6c93;
    margin: 6px auto;
    transition: 0.4s;
    color: #1e6c93
}


/* Rotate First Bar */

#menu-toggle:checked~label .nav-menu-icon .bar1 {
    -webkit-transform: rotate(-45deg) translate(-9px, 6px);
    transform: rotate(-45deg) translate(-9px, 6px);
}


/* Fade out second bar */

#menu-toggle:checked~label .nav-menu-icon .bar2 {
    opacity: 0;
}


/*Rotate last bar */

#menu-toggle:checked~label .nav-menu-icon .bar3 {
    -webkit-transform: rotate(45deg) translate(-8px, -8px);
    transform: rotate(45deg) translate(-8px, -8px);
}

@media only screen and (min-width: 1268px) {
    .navigation-bar-image-wrapper::after {
        content: 'Centinela Valley Union High School District';
        display: inline;
        color: #1e6c93;
        font-size: 1.3em;
        position: absolute;
        bottom: 52px;
        left: 220px;
        /*180px is for Chrome, 220px for Firefox*/
        font-weight: bold;
    }
}


/* Was 585px with smaller logo and font */


/* Was 624px for Chrome only now 660px for FF */

@media only screen and (max-width: 833px) {
    .staff-dashboard-header {
        margin-top: 100px;
        /*Used to be 170px */
    }
    .navigation-bar {
        display: inline;
    }
    .navigation-bar-header {
        display: inline-block;
    }
    .navigation-bar-image-wrapper {
        display: inline;
    }
    .nav-menu-icon {
        display: block;
        cursor: pointer
    }
    #navbar-logo {
        display: inline;
        vertical-align: middle;
        margin-left: 25%;
    }
    #home-icon {
        color: rgb(21, 73, 99);
    }
    .navigation-bar ul {
        position: relative;
        bottom: 60px;
        left: 15%;
        margin-bottom: -52px;
        /*Used to be -25px, now it's -50px */
        /*margin-bottom Used to be -10px */
    }
    .navigation-bar ul li {
        display: none;
        margin: auto;
    }
    ul.navigation-bar-ul>li~li::before {
        content: "•";
        margin-right: 8px;
        color: rgb(21, 73, 99);
    }
    #menu-toggle:checked~li {
        /*margin: 0 60px; */
        display: block;
        border: 0;
        border-radius: 0;
        animation: fadeIn 0.8s ease-in-out;
        padding: 15px 0;
    }
    body>div>header.navigation-bar-header>nav>ul>li:nth-child(3) {
        margin-top: 55px;
    }
    #arrow-link {
        display: block;
        background-color: #1e6c93;
    }
    .scrollArrow {
        display: block;
        font-size: 1.2em;
        position: fixed;
        z-index: 2;
        bottom: 2%;
        right: 25px;
        color: rgb(30, 108, 147);
        background-color: white;
        opacity: 0.65;
        border-image: initial;
        border: 3px solid rgb(30, 108, 147);
        border-radius: 10px;
        padding: 5px;
    }
}

@media only screen and (max-width: 833px) {
    .staff-dashboard-header {
        margin-top: 0px;
        /*Used to be 150px*/
    }
    .navigation-bar-header {
        position: fixed;
        background: #f4f7f9;
        border-bottom: 5px solid #1e6c93;
    }
}


/* Make the navigation bar responsive and
fixed starting at tablet sizes */

@media only screen and (max-width: 765px) {
    .staff-dashboard-header {
        margin-top: 95px;
        /*Used to be 150px*/
    }
    .navigation-bar-header {
        position: fixed;
        /* Bottom two BG-color and border-bottom were not here before */
        background: #f4f7f9;
        border-bottom: 5px solid #1e6c93;
    }
}


/* Media queries for the Google Doc iFrame so that the text inside 
appears centered all the time*/

@media only screen and (min-width: 1882px) {
    .google-sheet {
        width: 25%;
    }
}

@media only screen and (min-width: 1720px) and (max-width: 1881px) {
    .google-sheet {
        width: 28%;
    }
}

@media only screen and (min-width: 1521px) and (max-width: 1718px) {
    .google-sheet {
        width: 31%;
    }
}

@media only screen and (min-width: 1361px) and (max-width: 1520px) {
    .google-sheet {
        width: 35%;
    }
}

@media only screen and (min-width: 1199px) and (max-width: 1360px) {
    .google-sheet {
        width: 40%;
    }
}

@media only screen and (min-width: 1066px) and (max-width: 1198px) {
    .google-sheet {
        width: 45%;
    }
}

@media only screen and (min-width: 987px) and (max-width: 1065px) {
    .google-sheet {
        width: 50%;
    }
}

@media only screen and (min-width: 901px) and (max-width: 986px) {
    .google-sheet {
        width: 55%;
    }
}
/* ... */

